--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/composition-api": "^1.0.0-rc.12",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0"
   },
@@ -27,6 +28,11 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "vue-eslint-parser": "^7.6.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "typescript": "~4.1.5",
