--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "start": "npm run build && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "tailwindcss": "^2.2.19"
-  },
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.6.0",
     "@parcel/transformer-webmanifest": "^2.6.0",
-    "parcel": "^2.6.0"
+    "parcel": "^2.6.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
