--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.1.0",
   "author": "Victor Fateh",
   "scripts": {
-    "build": "parcel build ./*.html",
+    "build": "parcel build ./*.html ./*.xml",
     "dev": "parcel ./*.html --open",
     "start": "npm run build && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.6.0",
+    "@parcel/packager-xml": "^2.6.0",
     "@parcel/transformer-webmanifest": "^2.6.0",
+    "@parcel/transformer-xml": "^2.6.0",
     "parcel": "^2.6.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
